# SGG

./: CMakeLists.txt  README.md
dev-build/: CMakeCache.txt  Makefile  cmake_install.cmake
dev-build/.rcc/: SkyGridGCS_raw_qml_0.qrc  qmake_SkyGrid.qrc  qrc_qmake_SkyGrid.cpp
dev-build/.rcc/qmlcache/: SkyGridGCS_qml_loader_file_list.rsp  SkyGridGCS_qmlcache_loader.cpp
dev-build/SkyGrid/: qmldir
dev-build/SkyGrid/qml/: AssetRegistry.qml  Main.qml
dev-build/SkyGridGCS_autogen/: mocs_compilation.cpp
dev-build/SkyGridGCS_autogen/2DPUCG456N/: moc_WeatherManager.cpp.d  moc_WindCheckManager.cpp.d  moc_WindCheckManager.cpp.json  moc_WindTelemetryManager.cpp  moc_WindTelemetryManager.cpp.d  moc_WindTelemetryManager.cpp.json
dev-build/SkyGridGCS_autogen/4VROJRYZ4J/: moc_PreferencesManager.cpp  moc_PreferencesManager.cpp.d
dev-build/SkyGridGCS_autogen/AWH56BEWUT/: moc_BackendTrustManager.cpp  moc_BackendTrustManager.cpp.d  moc_BackendTrustManager.cpp.json  moc_DeviceManager.cpp.d  moc_SecureStorage.cpp  moc_SecureStorage.cpp.d  moc_SecureStorage.cpp.json
dev-build/SkyGridGCS_autogen/CL3GGLWYWM/: moc_EventLogManager.cpp  moc_EventLogManager.cpp.d  moc_EventLogManager.cpp.json  moc_FlightStatsManager.cpp  moc_FlightStatsManager.cpp.d  moc_FlightStatsManager.cpp.json  moc_ManualControlManager.cpp  moc_ManualControlManager.cpp.d  moc_ManualControlManager.cpp.json  moc_PostMissionSummaryManager.cpp  moc_PostMissionSummaryManager.cpp.d  moc_PostMissionSummaryManager.cpp.json  moc_PreflightChecklistManager.cpp.d  moc_PreflightChecklistManager.cpp.json
dev-build/SkyGridGCS_autogen/GVBWGARL6Y/: moc_TileCacheManager.cpp  moc_TileCacheManager.cpp.d  moc_TileCacheManager.cpp.json
dev-build/SkyGridGCS_autogen/JALNJGYI72/: moc_HomePositionManager.cpp  moc_HomePositionManager.cpp.d  moc_HomePositionManager.cpp.json  moc_MavsdkVehicleManager.cpp.d  moc_MavsdkVehicleManager.cpp.json  moc_MissionExecutionManager.cpp  moc_MissionExecutionManager.cpp.d  moc_MissionExecutionManager.cpp.json  moc_MissionUploadManager.cpp  moc_MissionUploadManager.cpp.d  moc_VehicleActionManager.cpp.d  moc_VehicleActionManager.cpp.json  moc_VehicleTelemetryModel.cpp  moc_VehicleTelemetryModel.cpp.d
dev-build/SkyGridGCS_autogen/M4YTXQ7V2H/: moc_MissionPlanModel.cpp  moc_MissionPlanModel.cpp.d  moc_MissionPlanModel.cpp.json  moc_MissionTypeModel.cpp.d
dev-build/SkyGridGCS_autogen/METKDVI4SS/: moc_AppState.cpp  moc_AppState.cpp.d  moc_AppState.cpp.json  moc_MapProviderController.cpp.d  moc_MapProviderController.cpp.json  moc_MapState.cpp  moc_MapState.cpp.d  moc_MissionStore.cpp  moc_MissionStore.cpp.d  moc_MissionStore.cpp.json  moc_ThemeController.cpp.d
dev-build/SkyGridGCS_autogen/N4YDKUCQNK/: moc_OperatorStateManager.cpp.d  (+3 more)
dev-build/meta_types/: SkyGridGCS_json_file_list.txt  SkyGridGCS_json_file_list.txt.timestamp  qt6skygridgcs_metatypes.json.gen
dev-build/qmltypes/: SkyGridGCS_foreign_types.txt
qml/app/: Theme.qml
qml/controls/: IconButton.qml  MissionToolButton.qml  PrimaryButton.qml  SegmentedControl.qml  WindowCloseButton.qml
qml/dashboard/: AircraftSummaryCard.qml  AircraftSummaryCard.qml.autosave  QuickActionTile.qml  RecentActivityCard.qml  SystemStatusCard.qml  TopStatusPill.qml  WeatherForecastCard.qml
qml/map/: ArcGisRuntimeMapSurface.qml  ArcGisSceneSurface.qml  CompassControl.qml  MissionMap.qml  TileMapSurface.qml
qml/mission/: MissionConfigPanel.qml  MissionPlanningPreviewPanel.qml  MissionSelectionModal.qml  MissionWorkspace.qml  PreflightChecklistModal.qml
qml/pilot/: AircraftStatusPanel.qml  HomeMarker.qml  ManualFlightMap.qml.autosave  ManualSettingsDrawer.qml  ManualSettingsPanel.qml  MapPrimaryView.qml  ModeSwitchTabs.qml  PilotModeTopBar.qml  PilotViewSwitcher.qml  SmallHudWidget.qml  SplitFlightView.qml  TelemetryGrid.qml  WindCompassWidget.qml
release/windows/: README_WINDOWS_RELEASE.txt  SkyGridGCS.ini
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.h  SessionManager.cpp  SessionManager.h  TokenManager.cpp  TokenManager.h
src/cache/: LocalSyncCache.cpp  LocalSyncCache.h
src/controllers/: AppState.cpp  AppState.h  MapProviderController.cpp  MapProviderController.h  MapState.cpp  MapState.h  MissionStore.cpp  MissionStore.h  ThemeController.h
src/flight/: EventLogManager.cpp  EventLogManager.h  FlightStatsManager.cpp  FlightStatsManager.h  ManualControlManager.cpp  ManualControlManager.h  PostMissionSummaryManager.cpp  PostMissionSummaryManager.h  PreflightChecklistManager.cpp  PreflightChecklistManager.h
src/map/: TileCacheManager.cpp  TileCacheManager.h
src/models/: MissionGenerationService.cpp  MissionGenerationService.h  MissionPlanModel.cpp  MissionPlanModel.h  MissionTypeModel.cpp  MissionTypeModel.h
src/network/: ApiClient.cpp  ApiClient.h  WebSocketClient.cpp  WebSocketClient.h
src/preferences/: PreferencesManager.cpp  PreferencesManager.h
src/profile/: OperatorStateManager.cpp  OperatorStateManager.h  ProfileManager.cpp  ProfileManager.h
src/security/: BackendTrustManager.cpp  BackendTrustManager.h  DeviceManager.cpp  DeviceManager.h  SecureStorage.cpp  SecureStorage.h
src/sync/: FlightSessionSyncManager.cpp  FlightSessionSyncManager.h  GcsEventSyncManager.cpp  GcsEventSyncManager.h  MissionPreviewManager.cpp  MissionPreviewManager.h  MissionSyncManager.cpp  MissionSyncManager.h  PilotActionSyncManager.cpp  PilotActionSyncManager.h  PreferencesSyncManager.cpp  PreferencesSyncManager.h  ProfileSyncManager.cpp  ProfileSyncManager.h  TelemetrySyncManager.cpp  TelemetrySyncManager.h  WeatherSyncManager.cpp  WeatherSyncManager.h
src/telemetry/: WeatherManager.cpp  WeatherManager.h  WindCheckManager.cpp  WindCheckManager.h  WindTelemetryManager.cpp  WindTelemetryManager.h
src/vehicle/: HomePositionManager.cpp  HomePositionManager.h  MavsdkVehicleManager.cpp  MavsdkVehicleManager.h  MissionExecutionManager.cpp  MissionExecutionManager.h  MissionUploadManager.cpp  MissionUploadManager.h  VehicleActionManager.cpp  VehicleActionManager.h  VehicleTelemetryModel.cpp  VehicleTelemetryModel.h
tools/: package_windows.ps1
(+135 files in other folders)
